--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,5 @@
 .woocommerce-MyAccount-navigation ul {list-style:none}
 .swal2-validation-message {margin-top:30px !important}
 .is-active {font-weight:600}
+.bid-btn {margin-left:10px !important}
+.preloader {margin-bottom:30px}
