Hide bid form if user is the highest bidder

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -3,3 +3,4 @@
 .is-active {font-weight:600}
 .bid-btn {margin-left:10px !important}
 .preloader {margin-bottom:30px}
+.yith-wcact-table-bids {display: none !important}
